<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.WorkoutDetailActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.WorkoutDetailActivity">

        <LinearLayout
            android:id="@+id/layout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/workout_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="Название упражнения"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/workout_detail_image_view"
                android:layout_width="320dp"
                android:layout_height="240dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:id="@+id/layout_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/workout_detail_label_record"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_record"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/workout_detail_label_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/workout_detail_record_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/workout_detail_record_date_entry"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/workout_detail_label_reps_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reps_count_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/workout_detail_record_reps_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/reps_count_number"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/workout_detail_label_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weight_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/workout_detail_record_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/weight_number"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/workout_detail_label_kg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/kg"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/workout_detail_choose_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weight_text"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/workout_detail_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0" />

                    <TextView
                        android:id="@+id/workout_detail_choose_kg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kg" />
                </LinearLayout>

                <SeekBar
                    android:id="@+id/workout_detail_weight_seek_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:max="200" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/workout_detail_reps_count_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reps_count_text"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <Button
                android:id="@+id/workout_detail_save_button"
                android:layout_width="786dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/save" />

            <TextView
                android:id="@+id/workout_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Это длинный текст, для проверки прокрутки. Это длинный текст, для проверки прокрутки. Это длинный текст, для проверки прокрутки. Это длинный текст, для проверки прокрутки. Это длинный текст, для проверки прокрутки. Это длинный текст, для проверки прокрутки. Это длинный текст, для проверки прокрутки. Это длинный текст, для проверки прокрутки. Это длинный текст, для проверки прокрутки. Это длинный текст, для проверки прокрутки. Это длинный текст, для проверки прокрутки. Это длинный текст, для проверки прокрутки. Это длинный текст, для проверки прокрутки. Это длинный текст, для проверки прокрутки." />


        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>